# oxley

./: .pre-commit-config.yaml  LICENSE  README.md  basic_schema.json  catvars.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: code-checks.yaml  github-actions.yaml  pypi_publish.yaml
oxley/: __init__.py  class_builder.py  exceptions.py  pydantic_utils.py  schema.py  schema_versions.py  types.py  typing.py  validators.py  version.py
respected_wizard/: __init__.py  class_builder.py  exceptions.py  main.py  new_file.py  pydantic_utils.py  schema_versions.py  typing.py
tests/data/: basic_schema.json  basic_vrs.json  basic_vrsatile.json  example_schema.json  vod.json
tests/integration/: test_class_construction.py
tests/unit/: test_build_classes.py  test_class_builder.py  test_pydantic_utils.py  test_schema.py  test_schema_versions.py  test_types.py  test_validators.py
