[metadata]
name = oxley
description = generate pydantic classes from JSONschema
version = attr: oxley.version.__version__

[options]
package = oxley
install_requires =
    pydantic
    requests

[options.extras_require]
dev =
    tox
    pre-commit
    black
    mypy
    types-requests
    isort

test =
    pytest
