[metadata]
name = oxley
description = generate pydantic classes from JSONschema
long_description = file: README.md, LICENSE
long_description_content_type='text/markdown'
version = attr: oxley.version.__version__
keywords = typing, pydantic, JSONschema
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package = oxley
install_requires =
    pydantic
    requests

[options.extras_require]
dev =
    tox
    pre-commit
    black
    mypy
    types-requests
    isort

test =
    pytest
