[metadata]
name = oxley
description = Dynamically generate pydantic classes from JSONschema at runtime
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

url = https://github.com/jsstevenson/oxley
download_url = https://github.com/jsstevenson/oxley/releases
project_urls =
    Bug Tracker = https://github.com/jsstevenson/oxley/issues

author = James Stevenson
author_email = james.sharpsteen@gmail.com
maintainer = James Stevenson
maintainer_email = james.sharpsteen@gmail.com

license = MIT
license_files = LICENSE

version = attr: oxley.version.__version__
keywords = typing, pydantic, JSONschema
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package = oxley
install_requires =
    pydantic
    requests

[options.extras_require]
dev =
    tox
    pre-commit
    black
    mypy
    types-requests
    isort
    flake8

test =
    pytest
